<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.FoodPickerActivity">

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:constraint_referenced_ids="button_one,button_two,button_three,button_four,button_five,button_six,button_seven,button_eight,button_nine,button_ten"
        app:flow_horizontalGap="6dp"
        app:flow_maxElementsWrap="2"
        app:flow_wrapMode="aligned" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/food_banana"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/food_berries"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/food_grapefruit"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/food_hummus"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/food_falafel" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/food_rice"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/food_spinach"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/food_broccoli"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/food_sweet_potato"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

    <Button
        android:id="@+id/button_ten"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/food_chocolate"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintVertical_weight="1" />

</androidx.constraintlayout.widget.ConstraintLayout>