<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="24dp"
    android:layout_height="match_parent"
    tools:context=".ui.FirstFragment">

    <Button
        android:id="@+id/button_permission_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_grant_permission" />

    <Button
        android:id="@+id/button_take_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_take_picture" />

    <Button
        android:id="@+id/button_select_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_select_photo" />

    <Button
        android:id="@+id/button_create_document"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_select_path" />

    <Button
        android:id="@+id/button_custom_intent_contract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_food" />

    <Button
        android:id="@+id/button_start_activity_for_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_start_activity_for_result" />

    <FrameLayout
        android:id="@+id/result_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />
</LinearLayout>