<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.SecondFragment">

    <EditText
        android:id="@+id/text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@null"
        android:hint="@string/return_result_text_input_hint"
        android:inputType="text" />

    <Button
        android:id="@+id/button_return_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_submit_result" />

    <Button
        android:id="@+id/button_go_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_go_back" />

</LinearLayout>